Bug #13152 : fixing directly domain filtering when coming from homepage (global parameter at true value)